--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
+jinja2==3.1.2
+aiofiles==23.2.1
 
 # Data processing
 pandas==2.1.4
