--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "8081:8081"
       - "443:443"
     environment:
+      PORT: 8081
       DATABASE_URL: postgresql+psycopg2://gradeuser:gradepass@postgres:5432/gradeinsight
     depends_on:
       - postgres
