--- a/.env.example
+++ b/.env.example
@@ -3,21 +3,24 @@
 # Application Settings
 APP_NAME=Grade Insight
 APP_VERSION=1.0.0
-SECRET_KEY:"SUPER_SECRET_KEY"
-JWT_SECRET_KEY:"SUPER_SECRET_KEY"
+SECRET_KEY:"SUPER_SECRET_PASSWORD"
+JWT_SECRET_KEY:"SUPER_SECRET_PASSWORD2"
 
-# Server Configuration
+# Server Settings
 HOST=0.0.0.0
 PORT=8081
 DEBUG=false
 
-# Database (sync, single instance)
+# Base Domain (for subdomain tenant parsing)
+BASE_DOMAIN=gradeinsight.com
+
+# Database (Docker internal hostname: postgres)
 DATABASE_URL=postgresql+psycopg2://gradeuser:gradepass@postgres:5432/gradeinsight
 
-# Redis Configuration (optional, if you plan to use Redis)
-REDIS_URL=redis://localhost:6379/0
+# Redis (if using; change/remove if not in use)
+REDIS_URL=redis://redis:6379/0
 
-# File Upload Configuration
+# File Uploads
 MAX_FILE_SIZE_MB=50
 ALLOWED_FILE_TYPES=.csv,.xlsx,.xls
 
@@ -25,11 +28,11 @@ ALLOWED_FILE_TYPES=.csv,.xlsx,.xls
 LOG_LEVEL=INFO
 LOG_FORMAT=json
 
-# CORS Settings (comma-separated, parse accordingly in your code)
-ALLOW_ORIGINS=https://len.uiscan.com,http://len.uiscan.com,http://localhost:3000,http://localhost:8000
-CORS_ENABLED=true
+# CORS (production domains only)
+# ALLOW_ORIGINS=https://gradeinsight.com,https://*.gradeinsight.com
+# CORS_ENABLED=true
 
-# Database Connection Pooling (tune as needed)
+# DB Connection Pooling
 DB_POOL_SIZE=10
 DB_MAX_OVERFLOW=20
 DB_POOL_TIMEOUT=30
