--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ DEBUG=false
 BASE_DOMAIN=gradeinsight.com
 
 # Database (Docker internal hostname: postgres)
-DATABASE_URL=postgresql+psycopg2://gradeuser:gradepass@postgres:5432/gradeinsight
+DATABASE_URL=postgresql+psycopg2://username:password@postgres:5432/gradeinsight
 
 # Redis (if using; change/remove if not in use)
 REDIS_URL=redis://redis:6379/0
