--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,11 @@ DEBUG=false
 # Base Domain (for subdomain tenant parsing)
 BASE_DOMAIN=gradeinsight.com
 
-# Database (Docker internal hostname: postgres)
-DATABASE_URL=postgresql+psycopg2://username:password@postgres:5432/database_name
+# Database
+POSTGRES_DB=gradeinsight
+POSTGRES_USER=gradeuser
+POSTGRES_PASSWORD=gradepass
+DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
 
 # Redis (if using; change/remove if not in use)
 REDIS_URL=redis://redis:6379/0
