--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ APP_VERSION=1.0.0
 SECRET_KEY:"SUPER_SECRET_PASSWORD"
 JWT_SECRET_KEY:"SUPER_SECRET_PASSWORD2"
 
+# Application Settings
+APP_NAME=Grade Insight
+APP_VERSION=1.0.0
+SECRET_KEY=SUPER_SECRET_PASSWORD
+JWT_SECRET_KEY=SUPER_SECRET_PASSWORD2
+
 # Server Settings
 HOST=0.0.0.0
 PORT=8081
